# manage

./: .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  Makefile  README.rst  pyproject.toml  setup.py  tox.ini
docs/: conf.py  installation.rst  manage.rst
examples/custom_namespaces/my_system/: group.py  user.py
examples/ipython_extensions/my_system/: __init__.py  extension.py
examples/naval/: naval_functions.py  naval_mine_commands.py  naval_ship_commands.py
examples/simple_commands/my_system/: commands.py
manage/: __init__.py  cli.py  commands_collector.py  template.py
pip-wheel-metadata/manage.dist-info/: METADATA
scripts/: release.sh
tests/: test_manage.py
