[tool.poetry]
name = "manage"
version = "1.0.0"
description = "\"Command Line Manager + Interactive Shell for Python Projects\"),"
authors = ["nixocio <nixocio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "7.00"
PyYAML = "^3.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
